fixes bug 198270 "Trunk crash [@ COOKIE_Write] (nsCookies.cpp line 1734)" patch=dwitte@stanford.edu r=mvl@exedo.nl sr=darin